--- a/Sparkt.WebApp/Web.config
+++ b/Sparkt.WebApp/Web.config
@@ -328,6 +328,10 @@
                      <match url="work/HSPUBHMedia" />
                     <action type="Redirect" url="work/HarShaakhPeUlluBaithaaHaiMedia"  redirectType="Permanent" />
                 </rule>
+              <rule name="Redirect t63 and c63" stopProcessing="true">
+                <match url="work/india-rf.php" />
+                <action type="Redirect" url="work/IndiaRF"  redirectType="Permanent" />
+              </rule>
               </rules>
         </rewrite>
     <validation validateIntegratedModeConfiguration="false" />
