--- a/Sparkt.WebApp/Web.config
+++ b/Sparkt.WebApp/Web.config
@@ -37,9 +37,7 @@
     <customErrors mode="On">
       <error statusCode="404" redirect="/" />
     </customErrors>
-    <authentication mode="Forms">
-      <forms loginUrl="~/Admin/Login" timeout="2880" />
-    </authentication>
+    <authentication mode="Forms"/>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
