--- a/Sparkt.WebApp/Web.config
+++ b/Sparkt.WebApp/Web.config
@@ -25,7 +25,7 @@
     <add key="SMTPDisplayName" value="Sparkt" />
   </appSettings>
   <connectionStrings>
-    <add name="SparktEntities" connectionString="Server=tcp:mahindra.database.windows.net,1433;Data Source=mahindra.database.windows.net;Initial Catalog=Sparkt;Persist Security Info=False;User ID=mahindra;Password=M0t0r0la;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=300;" />
+    <add name="SparktEntities" connectionString="Server=tcp:mahindra.database.windows.net,1433;Data Source=mahindra.database.windows.net;Initial Catalog=Sparkt;Persist Security Info=False;User ID=mahindra;Password=M0t0r0la@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=300;" />
     <!--<add name="PHFLEntities" connectionString="metadata=res://*/PHFLEntities.csdl|res://*/PHFLEntities.ssdl|res://*/PHFLEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:mahindra.database.windows.net;initial catalog=PHFL;persist security info=True;user id=mahindra;password=M0t0r0la;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <system.web>
